--- a/src/style.css
+++ b/src/style.css
@@ -8,3 +8,7 @@
       conic-gradient(from 90deg at 1px 1px,var(--_g))
        0 0/calc(var(--s)/5) calc(var(--s)/5);
 }
+
+body {
+  overflow: hidden;
+}
