LongActionIcon and LongButton

--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,10 @@
+@font-face {
+  font-family: "Lexend-VariableFont";
+  src:
+      local("Lexend-VariableFont"),
+      url("https://deniz.blue/fonts/Lexend-VariableFont_wght.ttf");
+}
+
 .ptr {
   pointer-events: all;
 }
